k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '5000'
spec:
  selector:
    app: prometheus-flask-app
  type: NodePort
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
    nodePort: 30000
